agrego alg nuevo

--- a/views/home.html
+++ b/views/home.html
@@ -95,7 +95,7 @@ rel="stylesheet"/>
 
   <footer>
 
-    <h1>Pagá con tarjeta o en efectivoooooooooooooooo</h1>
+    <h1>Pagá con tarjeta o en efectivo</h1>
     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
       puntos de pago. ¡Y siempre es seguro!</p>
 
