se agrega algo nuevo

--- a/views/home.html
+++ b/views/home.html
@@ -42,7 +42,7 @@ rel="stylesheet"/>
     <ul>
       <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
       <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
-      <li><a href="">Mis compras</a></li>
+      <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
     </ul>
   </header>
 
@@ -50,45 +50,45 @@ rel="stylesheet"/>
     <h1 class="titulares">Sección: Basado en tu última visita</h1>
 
     <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-    <p>$6.770</p>
-    <p>40% OFF</p>
+    <p class="precios">$6.770</p>
+    <p class="descuentos">40% OFF</p>
     <h4>Cafetera Moulinex</h4>
 
     <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    <p>$230.000</p>
-    <p>20% off</p>
+    <p class="precios">$230.000</p>
+    <p class="descuentos">20% off</p>
     <h4>MacBook Pro 2019</h4>
 
     <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
-    <p>$70.500</p>
-    <p>10% off</p>
+    <p class="precios">$70.500</p>
+    <p class="descuentos">10% off</p>
     <h4>Samsung Galaxy S10</h4>
 
     <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
-    <p>$23.200</p>
-    <p>5% off</p>
+    <p class="precios">$23.200</p>
+    <p class="descuentos">5% off</p>
     <h4>SmartTv Samsung 43"</h4>
 
     <h1>Sección de Ofertas</h1>
 
     <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-    <p>$6.770</p>
-    <p>40% OFF</p>
+    <p class="precios">6.770</p>
+    <p class="descuentos">40% OFF</p>
     <h4>Cafetera Moulinex</h4>
 
     <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    <p>$230.000</p>
-    <p>20% off</p>
+    <p class="precios">$230.000</p>
+    <p class="descuentos">20% off</p>
     <h4>MacBook Pro 2019</h4>
 
     <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
-    <p>$70.500</p>
-    <p>10% off</p>
+    <p class="precios">$70.500</p>
+    <p class="descuentos">10% off</p>
     <h4>Samsung Galaxy S10</h4>
 
     <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
-    <p>$23.200</p>
-    <p>5% off</p>
+    <p class="precios">$23.200</p>
+    <p class="descuentos">5% off</p>
     <h4>SmartTv Samsung 43"</h4>
 
   </main>
