--- a/views/home.html
+++ b/views/home.html
@@ -6,13 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-rel="stylesheet"/>
-<link rel="stylesheet" href="/public/css/styles.css"> 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/1f8c974c08.js" crossorigin="anonymous"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/public/css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/1f8c974c08.js" crossorigin="anonymous"></script>
 
 
 
@@ -22,13 +21,12 @@ rel="stylesheet"/>
   <header>
     <label><img src="../public/images/logo-mercado-liebre.svg" width="250" height="200"></label>
     <section>
-      <input type="search" name="busquedaDeProductos" 
-      placeholder="Buscar productos, marcas..."><input type="submit">
-     <i class="fas fa-search"></i>
-  </section>
+      <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas..."><input type="submit">
+      <i class="fas fa-search"></i>
+    </section>
 
 
-  <h1><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito</h1>
+    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito</h1>
 
 
     <ul>
@@ -44,14 +42,14 @@ rel="stylesheet"/>
       <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
       <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
     </ul>
-  
-  
+
+
     <div class="hambContenedor">
       <div class="burguer-menu">
-      <i class="fas fa-bars"></i>
+        <i class="fas fa-bars"></i>
       </div>
-  
-  
+
+
   </header>
 
 
@@ -122,5 +120,3 @@ rel="stylesheet"/>
 </body>
 
 </html>
-
-
