se agrega algo nuevo

--- a/views/home.html
+++ b/views/home.html
@@ -21,12 +21,12 @@
   <header>
     <label><img src="../public/images/logo-mercado-liebre.svg" width="250" height="200"></label>
     <section>
-      <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas..."><input type="submit">
-      <i class="fas fa-search"></i>
-    </section>
+      <section>
+        <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas...">
+        <button type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
 
-
-    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito</h1>
+    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito
+    </h1>
 
 
     <ul>
