--- a/views/home.html
+++ b/views/home.html
@@ -25,29 +25,30 @@
         <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas...">
         <button type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
 
-    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito
-    </h1>
+        <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
+          credito
+        </h1>
 
 
-    <ul>
-      <li><a href=""> Ofertas</a> </li>
-      <li><a href="">Tiendas oficiales</a></li>
-      <li><a href="">Vender</a></li>
-      <li><a href="">Ayuda </a></li>
-    </ul>
+        <ul>
+          <li><a href=""> Ofertas</a> </li>
+          <li><a href="">Tiendas oficiales</a></li>
+          <li><a href="">Vender</a></li>
+          <li><a href="">Ayuda </a></li>
+        </ul>
 
 
-    <ul>
-      <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
-      <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
-      <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-    </ul>
+        <ul>
+          <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
+          <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
+          <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+        </ul>
 
 
-    <div class="hambContenedor">
-      <div class="burguer-menu">
-        <i class="fas fa-bars"></i>
-      </div>
+        <div class="hambContenedor">
+          <div class="burguer-menu">
+            <i class="fas fa-bars"></i>
+          </div>
 
 
   </header>
@@ -56,60 +57,147 @@
   <main>
     <h1 class="titulares">Sección: Basado en tu última visita</h1>
 
-    <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-    <p class="precios">$6.770</p>
-    <p class="descuentos">40% OFF</p>
-    <h4>Cafetera Moulinex</h4>
 
-    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    <p class="precios">$230.000</p>
-    <p class="descuentos">20% off</p>
-    <h4>MacBook Pro 2019</h4>
+    <article class="article-box">
+      <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$6.770</p>
+      <p class="descuentos">40% OFF</p>
+      <h4>Cafetera Moulinex</h4>
+    </article>
 
-    <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
-    <p class="precios">$70.500</p>
-    <p class="descuentos">10% off</p>
-    <h4>Samsung Galaxy S10</h4>
 
-    <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
-    <p class="precios">$23.200</p>
-    <p class="descuentos">5% off</p>
-    <h4>SmartTv Samsung 43"</h4>
+    <article class="article-box">
+      <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$230.000</p>
+      <p class="descuentos">20% off</p>
+      <h4>MacBook Pro 2019</h4>
+    </article>
 
-    <h1>Sección de Ofertas</h1>
 
-    <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-    <p class="precios">6.770</p>
-    <p class="descuentos">40% OFF</p>
-    <h4>Cafetera Moulinex</h4>
+    <article class="article-box">
+      <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$70.500</p>
+      <p class="descuentos">10% off</p>
+      <h4>Samsung Galaxy S10</h4>
+    </article>
 
-    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    <p class="precios">$230.000</p>
-    <p class="descuentos">20% off</p>
-    <h4>MacBook Pro 2019</h4>
 
-    <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
-    <p class="precios">$70.500</p>
-    <p class="descuentos">10% off</p>
-    <h4>Samsung Galaxy S10</h4>
 
-    <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
-    <p class="precios">$23.200</p>
-    <p class="descuentos">5% off</p>
-    <h4>SmartTv Samsung 43"</h4>
+    <article class="article-box">
+      <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$23.200</p>
+      <p class="descuentos">5% off</p>
+      <h4>SmartTv Samsung 43"</h4>
+    </article>
+
+
+
+    <h1 class="titulares">Sección de Ofertas</h1>
+
+
+
+    <article class="article-box">
+      <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">6.770</p>
+      <p class="descuentos">40% OFF</p>
+      <h4>Cafetera Moulinex</h4>
+    </article>
+
+
+    <article class="article-box">
+      <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$230.000</p>
+      <p class="descuentos">20% off</p>
+      <h4>MacBook Pro 2019</h4>
+    </article>
+
+
+
+
+    <article class="article-box">
+      <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$70.500</p>
+      <p class="descuentos">10% off</p>
+      <h4>Samsung Galaxy S10</h4>
+    </article>
+
+
+
+    <article class="article-box">
+      <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+    </article>
+    <article class="article-box">
+      <div>
+        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+      </div>
+      <p class="precios">$23.200</p>
+      <p class="descuentos">5% off</p>
+      <h4>SmartTv Samsung 43"</h4>
+    </article>
 
   </main>
 
+
+
   <footer>
+
+
+    <div class="icono">
+      <i class="fa-solid fa-credit-card"></i>
+    </div>
 
     <h1>Pagá con tarjeta o en efectivo</h1>
     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
       puntos de pago. ¡Y siempre es seguro!</p>
 
+
+    <div class="icono">
+      <i class="fa-solid fa-gift"></i>
+    </div>
     <h1>Envío gratis desde $ 2.500</h1>
     <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
       productos. Es un beneficio de Mercado Puntos.</p>
 
+
+
+    <div class="icono">
+      <i class="fa-solid fa-user-shield"></i>
+    </div>
     <h1>Seguridad, de principio a fin</h1>
     <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
       porque estás siempre protegid@.</p>
