se agrega algo nuevo

--- a/views/home.html
+++ b/views/home.html
@@ -21,95 +21,97 @@
   <header>
     <label><img src="../public/images/logo-mercado-liebre.svg" width="250" height="200"></label>
     <section>
-      <section>
-        <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas...">
-        <button type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-
-        <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
-          credito
-        </h1>
+      <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas..."><input type="submit">
+      <i class="fas fa-search"></i>
+    </section>
 
 
-        <ul>
-          <li><a href=""> Ofertas</a> </li>
-          <li><a href="">Tiendas oficiales</a></li>
-          <li><a href="">Vender</a></li>
-          <li><a href="">Ayuda </a></li>
-        </ul>
+    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito</h1>
 
 
-        <ul>
-          <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
-          <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
-          <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-        </ul>
+    <ul>
+      <li><a href=""> Ofertas</a> </li>
+      <li><a href="">Tiendas oficiales</a></li>
+      <li><a href="">Vender</a></li>
+      <li><a href="">Ayuda </a></li>
+    </ul>
 
 
-        <div class="hambContenedor">
-          <div class="burguer-menu">
-            <i class="fas fa-bars"></i>
-          </div>
+    <ul>
+      <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
+      <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
+      <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+    </ul>
+
+
+    <div class="hambContenedor">
+      <div class="burguer-menu">
+        <i class="fas fa-bars"></i>
+      </div>
 
 
   </header>
 
-
+  
   <main>
     <h1 class="titulares">Sección: Basado en tu última visita</h1>
 
 
     <article class="article-box">
-      <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+    <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
     </article>
-    <article class="article-box">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">$6.770</p>
-      <p class="descuentos">40% OFF</p>
-      <h4>Cafetera Moulinex</h4>
+
+    <article class="article-datos">
+    <div>
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>
+    <p class="precios">$6.770</p>
+    <p class="descuentos">40% OFF</p>
+    <h4>Cafetera Moulinex</h4>
     </article>
 
 
     <article class="article-box">
-      <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    </article>
-    <article class="article-box">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">$230.000</p>
-      <p class="descuentos">20% off</p>
-      <h4>MacBook Pro 2019</h4>
+    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
     </article>
 
+    <article class="article-datos">
+    <div>
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>
+    <p class="precios">$230.000</p>
+    <p class="descuentos">20% off</p>
+    <h4>MacBook Pro 2019</h4>
+  </article>
 
     <article class="article-box">
       <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
     </article>
-    <article class="article-box">
+    
+    <article class="article-datos">
       <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">$70.500</p>
-      <p class="descuentos">10% off</p>
-      <h4>Samsung Galaxy S10</h4>
-    </article>
-
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>
+    <p class="precios">$70.500</p>
+    <p class="descuentos">10% off</p>
+    <h4>Samsung Galaxy S10</h4>
+  </article>
 
 
     <article class="article-box">
-      <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+    <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
     </article>
-    <article class="article-box">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">$23.200</p>
+    
+    <article class="article-datos">
+    <div>
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>  
+    <p class="precios">$23.200</p>
       <p class="descuentos">5% off</p>
       <h4>SmartTv Samsung 43"</h4>
     </article>
 
+  
 
 
     <h1 class="titulares">Sección de Ofertas</h1>
@@ -117,57 +119,58 @@
 
 
     <article class="article-box">
-      <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+    <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
     </article>
-    <article class="article-box">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">6.770</p>
-      <p class="descuentos">40% OFF</p>
-      <h4>Cafetera Moulinex</h4>
-    </article>
-
-
-    <article class="article-box">
-      <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    </article>
-    <article class="article-box">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">$230.000</p>
-      <p class="descuentos">20% off</p>
-      <h4>MacBook Pro 2019</h4>
-    </article>
-
-
-
+    
+    <article class="article-datos">
+    <div>
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>
+    <p class="precios">6.770</p>
+    <p class="descuentos">40% OFF</p>
+    <h4>Cafetera Moulinex</h4>
+  </article>
 
     <article class="article-box">
-      <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
     </article>
-    <article class="article-box">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
-      <p class="precios">$70.500</p>
-      <p class="descuentos">10% off</p>
-      <h4>Samsung Galaxy S10</h4>
-    </article>
+    
+    <article class="article-datos">
+    <div>
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>
+    <p class="precios">$230.000</p>
+    <p class="descuentos">20% off</p>
+    <h4>MacBook Pro 2019</h4>
+  </article>
 
+
+
+    <article class="article-box">
+    <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+    </article>
+    
+    <article class="article-datos">
+    <div>
+      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    </div>
+    <p class="precios">$70.500</p>
+    <p class="descuentos">10% off</p>
+    <h4>Samsung Galaxy S10</h4>
+  </article>
 
 
     <article class="article-box">
       <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
     </article>
-    <article class="article-box">
+    
+    <article class="article-datos">
       <div>
         <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
       </div>
-      <p class="precios">$23.200</p>
-      <p class="descuentos">5% off</p>
-      <h4>SmartTv Samsung 43"</h4>
+    <p class="precios">$23.200</p>
+    <p class="descuentos">5% off</p>
+    <h4>SmartTv Samsung 43"</h4>
     </article>
 
   </main>
