--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,9 @@ footer{
 
 .titulares {
     font-size: 24px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 .precios {
@@ -75,22 +78,34 @@ footer{
 
 
 .circulo {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
     border: solid 1px #39b54a;
     color: #39b54a;
-    padding: 8px;
+    padding: 2.9px;
+
 }
 
 .article-box {
     border-top: solid 1px #ebebeb;
     padding: 15px;
     border-bottom: solid 10 px #ebebeb;
-    
+    box-shadow: 0px 0px 10px rgb(245, 118, 118);
+    background-color: white;
 }
+
+.article-datos{
+    padding: 15px;
+    padding-bottom: 10px;
+    border-bottom: solid 10px #ebebeb;
+    border-top: solid 1px #ebebeb;
+    background-color: white;
+    position: relative;
+}
+
 
 .icono{
     color: #1259c3;
