--- a/views/home.html
+++ b/views/home.html
@@ -52,16 +52,18 @@
 
   </header>
 
-  
+  <div><img src="/public/images/img-home-banner.jpg" alt="img-home-banner" width="100%"></div>
+
+
   <main>
-    <h1 class="titulares">Sección: Basado en tu última visita</h1>
+    <h1 class="titulares">Basado en tu última visita</h1>
 
 
-    <article class="article-box">
+    <article class="contenedor">
     <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-    </article>
+    
 
-    <article class="article-datos">
+    <article class="product">
     <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>
@@ -69,46 +71,50 @@
     <p class="descuentos">40% OFF</p>
     <h4>Cafetera Moulinex</h4>
     </article>
-
-
-    <article class="article-box">
-    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
     </article>
 
-    <article class="article-datos">
+
+    <article class="contenedor">
+    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+    
+
+    <article class="product">
     <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>
     <p class="precios">$230.000</p>
     <p class="descuentos">20% off</p>
     <h4>MacBook Pro 2019</h4>
-  </article>
-
-    <article class="article-box">
-      <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
     </article>
+    </article>
+
+    <article class="contenedor">
+      <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
     
-    <article class="article-datos">
+    
+    <article class="product">
       <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>
     <p class="precios">$70.500</p>
     <p class="descuentos">10% off</p>
     <h4>Samsung Galaxy S10</h4>
-  </article>
-
-
-    <article class="article-box">
-    <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
     </article>
+    </article>
+
+
+    <article class="contenedor">
+    <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
     
-    <article class="article-datos">
+    
+    <article class="product">
     <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>  
     <p class="precios">$23.200</p>
       <p class="descuentos">5% off</p>
       <h4>SmartTv Samsung 43"</h4>
+    </article>
     </article>
 
   
@@ -118,59 +124,63 @@
 
 
 
-    <article class="article-box">
+    <article class="contenedor">
     <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-    </article>
     
-    <article class="article-datos">
+    
+    <article class="product">
     <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>
     <p class="precios">6.770</p>
     <p class="descuentos">40% OFF</p>
     <h4>Cafetera Moulinex</h4>
-  </article>
-
-    <article class="article-box">
-    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
     </article>
+    </article>
+
+    <article class="contenedor">
+    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
     
-    <article class="article-datos">
+    
+    <article class="product">
     <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>
     <p class="precios">$230.000</p>
     <p class="descuentos">20% off</p>
     <h4>MacBook Pro 2019</h4>
-  </article>
-
-
-
-    <article class="article-box">
-    <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
     </article>
+    </article>
+
+
+
+    <article class="contenedor">
+    <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
     
-    <article class="article-datos">
+    
+    <article class="product">
     <div>
       <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
     </div>
     <p class="precios">$70.500</p>
     <p class="descuentos">10% off</p>
     <h4>Samsung Galaxy S10</h4>
-  </article>
-
-
-    <article class="article-box">
-      <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
     </article>
+    </article>
+
+
+    <article class="contenedor">
+      <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
     
-    <article class="article-datos">
+    
+    <article class="product">
       <div>
         <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
       </div>
     <p class="precios">$23.200</p>
     <p class="descuentos">5% off</p>
     <h4>SmartTv Samsung 43"</h4>
+    </article>
     </article>
 
   </main>
