--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,7 @@ main {
 }
 
 
-footer{
+footer {
     text-align: center;
     margin: auto;
     padding: 30px;
@@ -31,9 +31,10 @@ footer{
 
 .titulares {
     font-size: 24px;
-    text-align: center;
+    font-family: 'roboto', sans-serif;
     padding-top: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
+    text-align: center;
 }
 
 .precios {
@@ -78,35 +79,53 @@ footer{
 
 
 .circulo {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
     border: solid 1px #39b54a;
     color: #39b54a;
-    padding: 2.9px;
-
+    padding: 8px;
 }
 
-.article-box {
-    border-top: solid 1px #ebebeb;
-    padding: 15px;
-    border-bottom: solid 10 px #ebebeb;
-    box-shadow: 0px 0px 10px rgb(245, 118, 118);
+.contenedor{
+    margin: auto;
     background-color: white;
-}
-
-.article-datos{
-    padding: 15px;
+    width: 90%;
+    text-align: center;
+    padding-top: 10px;
     padding-bottom: 10px;
-    border-bottom: solid 10px #ebebeb;
+ }
+.product{
     border-top: solid 1px #ebebeb;
-    background-color: white;
-    position: relative;
+    padding: 15px;
+    text-align: center;
+    border-bottom: solid 10 px #ebebeb;
+    
 }
 
-
-.icono{
+.icono {
     color: #1259c3;
+}
+
+@media (min-width: 361px){
+    .descrip{
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    article{
+        box-shadow: 0px 0px 10px rgb(61, 61, 61);
+    }
+    ul{
+     font-size: 12px;
+     margin: 0;
+     padding: 0;
+    }
+
+}
+@media(min-width: 769px){
+    article{
+      box-shadow:none
+    }
 }
