se agrega algo nuevo

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,8 +20,15 @@ main {
     width: 90%;
     margin: auto;
     background-color: #ebebeb;
+
 }
 
+
+.centrar{
+    margin:auto;
+	display:block;
+
+}
 
 footer {
     text-align: center;
@@ -46,7 +53,7 @@ footer {
 .descuentos {
     font-size: 12px;
     padding: 10px;
-    color: #39b54a;
+    color: #0bed31;
 
 }
 
@@ -76,20 +83,18 @@ footer {
 }
 
 
+.nombreProducto{
+    color: #9a9d9b;
+    font-size: small;
+    text-align: left;
+    padding: 10px;
+}
 
 
 
-.circulo{
-    width: 60px;
-    height: 40px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    border: solid 1px #39b54a;
-    color: #39b54a;
-    padding: 8px;
-    
-    }
+
+
+
 
 
 
@@ -98,10 +103,11 @@ footer {
 .contenedor{
     margin: auto;
     background-color: white;
-    width: 90%;
-    text-align: center;
+    width: 90%; 
     padding-top: 10px;
     padding-bottom: 10px;
+    text-align: center;
+    
  }
 .product{
     border-top: solid 1px #ebebeb;
@@ -109,9 +115,18 @@ footer {
     text-align: center;
     justify-content: center;
     border-bottom: solid 10 px #ebebeb;
+    display:flex;
+    
     
     
 }
+
+.box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
 
 .icono {
     color: #1259c3;
@@ -137,3 +152,28 @@ footer {
       box-shadow:none
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.circulo{
+    width: 10px;
+    height: 10px;
+    -moz-border-radius: 30%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    border: solid 1px #049e1e;
+    color: #049e1e;
+    padding: 5px;
+    }
+    */
