--- a/views/home.html
+++ b/views/home.html
@@ -52,7 +52,9 @@
 
   </header>
 
-  <div><img src="/public/images/img-home-banner.jpg" alt="img-home-banner" width="100%"></div>
+  
+  <div>
+    <img src="/public/images/img-home-banner.jpg" alt="img-home-banner" width="100%"></div>
 
 
   <main>
@@ -64,13 +66,12 @@
     
 
     <article class="product">
-    <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
+    <div class="box">
+    <div> <p class="precios">$6.770</p> </div>
+    <div> <p class="descuentos">40% OFF</p> </div>
+    <div> <h4 class="nombreProducto">Cafetera Moulinex</h4> </div>
     </div>
-    <p class="precios">$6.770</p>
-    <p class="descuentos">40% OFF</p>
-    <h4>Cafetera Moulinex</h4>
-    </article>
+  </article> 
     </article>
 
 
@@ -79,12 +80,10 @@
     
 
     <article class="product">
-    <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-    </div>
+    
     <p class="precios">$230.000</p>
     <p class="descuentos">20% off</p>
-    <h4>MacBook Pro 2019</h4>
+    <h4 class="nombreProducto">MacBook Pro 2019</h4>
     </article>
     </article>
 
@@ -93,13 +92,11 @@
     
     
     <article class="product">
-      <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-    </div>
+    
     <p class="precios">$70.500</p>
     <p class="descuentos">10% off</p>
-    <h4>Samsung Galaxy S10</h4>
-    </article>
+    <h4 class="nombreProducto">Samsung Galaxy S10</h4>
+  </article>
     </article>
 
 
@@ -108,12 +105,10 @@
     
     
     <article class="product">
-    <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-    </div>  
+   
     <p class="precios">$23.200</p>
       <p class="descuentos">5% off</p>
-      <h4>SmartTv Samsung 43"</h4>
+      <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
     </article>
     </article>
 
@@ -129,12 +124,10 @@
     
     
     <article class="product">
-    <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-    </div>
+    
     <p class="precios">6.770</p>
     <p class="descuentos">40% OFF</p>
-    <h4>Cafetera Moulinex</h4>
+    <h4 class="nombreProducto">Cafetera Moulinex</h4>
     </article>
     </article>
 
@@ -143,13 +136,11 @@
     
     
     <article class="product">
-    <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-    </div>
+   
     <p class="precios">$230.000</p>
     <p class="descuentos">20% off</p>
-    <h4>MacBook Pro 2019</h4>
-    </article>
+    <h4 class="nombreProducto">MacBook Pro 2019</h4>  
+  </article>
     </article>
 
 
@@ -159,13 +150,11 @@
     
     
     <article class="product">
-    <div>
-      <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-    </div>
+   
     <p class="precios">$70.500</p>
     <p class="descuentos">10% off</p>
-    <h4>Samsung Galaxy S10</h4>
-    </article>
+    <h4 class="nombreProducto">Samsung Galaxy S10</h4>  
+  </article>
     </article>
 
 
@@ -174,13 +163,11 @@
     
     
     <article class="product">
-      <div>
-        <i class="circulo"> <i class="fa-solid fa-truck"></i></i>
-      </div>
+     
     <p class="precios">$23.200</p>
     <p class="descuentos">5% off</p>
-    <h4>SmartTv Samsung 43"</h4>
-    </article>
+    <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
+  </article>
     </article>
 
   </main>
