--- a/views/home.html
+++ b/views/home.html
@@ -61,114 +61,131 @@
     <h1 class="titulares">Basado en tu última visita</h1>
 
 
-    <article class="contenedor">
-    <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+    <section>
+      <article class="contenedor">
+        <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+        
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+      </div>
     
-
-    <article class="product">
-    <div class="box">
-    <div> <p class="precios">$6.770</p> </div>
-    <div> <p class="descuentos">40% OFF</p> </div>
-    <div> <h4 class="nombreProducto">Cafetera Moulinex</h4> </div>
-    </div>
-  </article> 
-    </article>
-
-
-    <article class="contenedor">
-    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    
-
-    <article class="product">
-    
-    <p class="precios">$230.000</p>
-    <p class="descuentos">20% off</p>
-    <h4 class="nombreProducto">MacBook Pro 2019</h4>
-    </article>
-    </article>
-
-    <article class="contenedor">
-      <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+        <article class="product">
+        <div class="probando">
+        <p class="precios">$6.770</p>
+        <p class="descuentos">40% OFF</p>
+        </div>
+        <h4 class="nombreProducto">Cafetera Moulinex</h4> 
+        </article> 
+        </article>
     
     
-    <article class="product">
+        <article class="contenedor">
+        <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+        
     
-    <p class="precios">$70.500</p>
-    <p class="descuentos">10% off</p>
-    <h4 class="nombreProducto">Samsung Galaxy S10</h4>
-  </article>
-    </article>
-
-
-    <article class="contenedor">
-    <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+        <article class="product">
+          <div class="probando">
+        <p class="precios">$230.000</p>
+        <p class="descuentos">20% off</p>
+          </div>
+        <h4 class="nombreProducto">MacBook Pro 2019</h4>
+        </article>
+        </article>
     
-    
-    <article class="product">
-   
-    <p class="precios">$23.200</p>
-      <p class="descuentos">5% off</p>
-      <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
-    </article>
-    </article>
-
-  
-
-
-    <h1 class="titulares">Sección de Ofertas</h1>
-
-
-
-    <article class="contenedor">
-    <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+        <article class="contenedor">
+          <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+        
+        
+        <article class="product">
+        
+        <div class="probando">
+        <p class="precios">$70.500</p>
+        <p class="descuentos">10% off</p>
+        </div>
+        <h4 class="nombreProducto">Samsung Galaxy S10</h4>
+      </article>
+        </article>
     
     
-    <article class="product">
+        <article class="contenedor">
+        <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+        
+        
+        <article class="product">
+       
+        <div class="probando">
+        <p class="precios">$23.200</p>
+          <p class="descuentos">5% off</p>
+        </div>
+          <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
+        </article>
+        </article>
     
-    <p class="precios">6.770</p>
-    <p class="descuentos">40% OFF</p>
-    <h4 class="nombreProducto">Cafetera Moulinex</h4>
-    </article>
-    </article>
-
-    <article class="contenedor">
-    <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-    
-    
-    <article class="product">
-   
-    <p class="precios">$230.000</p>
-    <p class="descuentos">20% off</p>
-    <h4 class="nombreProducto">MacBook Pro 2019</h4>  
-  </article>
-    </article>
-
-
-
-    <article class="contenedor">
-    <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+      
     
     
-    <article class="product">
-   
-    <p class="precios">$70.500</p>
-    <p class="descuentos">10% off</p>
-    <h4 class="nombreProducto">Samsung Galaxy S10</h4>  
-  </article>
-    </article>
-
-
-    <article class="contenedor">
-      <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+        <h1 class="titulares">Sección de Ofertas</h1>
     
     
-    <article class="product">
-     
-    <p class="precios">$23.200</p>
-    <p class="descuentos">5% off</p>
-    <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
-  </article>
-    </article>
+    
+        <article class="contenedor">
+        <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+        
+        
+        <article class="product">
+        
+          <div class="probando">
+        <p class="precios">6.770</p>
+        <p class="descuentos">40% OFF</p>
+          </div>
+        <h4 class="nombreProducto">Cafetera Moulinex</h4>
+        </article>
+        </article>
+    
+        <article class="contenedor">
+        <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+        
+        
+        <article class="product">
+       
+        <div class="probando">
+        <p class="precios">$230.000</p>
+        <p class="descuentos">20% off</p>
+        <h4 class="nombreProducto">MacBook Pro 2019</h4>  
+      </article>
+        </article>
+    
+    
+    
+        <article class="contenedor">
+        <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+        
+        
+        <article class="product">
+       
+          <div class="probando">
+        <p class="precios">$70.500</p>
+        <p class="descuentos">10% off</p>
+          </div>
+        <h4 class="nombreProducto">Samsung Galaxy S10</h4>  
+      </article>
+        </article>
+    
+    
+        <article class="contenedor">
+          <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+        
+        
+        <article class="product">
+         
+          <div class="probando">  
+        <p class="precios">$23.200</p>
+        <p class="descuentos">5% off</p>
+          </div>
+        <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
+      </article>
+        </article>
+    </section>
 
   </main>
 
